# Calisp

./: .gitignore  LICENSE.txt  README.md  setup.cfg  setup.py
Calisp/: calisp.py  peptide_spectrum_match_files.py  spectrum_analysis_utils.py
benchmarking/: sif-benchmarking.html  sif-benchmarking.ipynb  sip benchmarking.html  sip benchmarking.ipynb
src/: calisp.py  data_store.py  element_count_and_mass_utils.py  peptide_spectrum_match_files.py  spectrum_analysis_utils.py
src/calisp/: calisp.py  calisp_compute_medians.py  calisp_filter_patterns.py  data_store.py  element_count_and_mass_utils.py  experiment_files.py  isotope_matrix.txt  isotopic_pattern_utils.py  log.py  main.py  peptide_spectrum_match_files.py  spectrum_analysis_utils.py  unimod.py
test/calisp-output/: calisp_test_data.feather
