[metadata]
name = Calisp
version = 0.0
author = Marc Strous
author_email = mstrous@ucalgary.ca
description = Isotope analysis of proteomics data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kinestetika/Calisp
project_urls =
    Bug Tracker = https://github.com/kinestetika/Calisp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Scientists
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src